--- a/literature.bib
+++ b/literature.bib
@@ -15,10 +15,28 @@
 	file = {ALD_Review_2005.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2E677H5R/ALD_Review_2005.pdf:application/pdf}
 }
 
+@article{cignoni_dewall:_1998,
+	title = {{DeWall}: A fast divide and conquer Delaunay triangulation algorithm in Ed},
+	volume = {30},
+	issn = {0010-4485},
+	shorttitle = {{DeWall}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0010448597000821},
+	doi = {10.1016/S0010-4485(97)00082-1},
+	abstract = {The paper deals with Delaunay Triangulations ({DT}) in Ed space. This classic computational geometry problem is studied from the point of view of the efficiency, extendibility to any dimensionality, and ease of implementation. A new solution to {DT} is proposed, based on an original interpretation of the well-known Divide and Conquer paradigm. One of the main characteristics of this new algorithm is its generality: it can be simply extended to triangulate point sets in any dimension. The technique adopted is very efficient and presents a subquadratic behaviour in real applications in E3, although its computational complexity does not improve the theoretical bounds reported in the literature. An evaluation of the performance on a number of datasets is reported, together with a comparison with other {DT} algorithms.},
+	number = {5},
+	urldate = {2014-06-24},
+	journal = {Computer-Aided Design},
+	author = {Cignoni, P and Montani, C and Scopigno, R},
+	month = apr,
+	year = {1998},
+	keywords = {Delaunay triangulation, divide and conquer, uniform grids},
+	pages = {333--341},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5VGE2GAW/Cignoni et al. - 1998 - DeWall A fast divide and conquer Delaunay triangu.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6ZURVU8C/S0010448597000821.html:text/html}
+}
+
 @phdthesis{lorenz_entwicklung_2012,
 	title = {Entwicklung und Verifikation eines kombinierten Kinetic Monte Carlo / Molekulardynamik Modells zur Simulation von Schichtabscheidungen},
 	url = {http://nbn-resolving.de/urn:nbn:de:bsz:ch1-qucosa-106314},
-	language = {German},
 	urldate = {2014-07-24},
 	author = {Lorenz, Erik E.},
 	month = sep,
@@ -32,7 +50,6 @@
 	issn = {0195-928X, 1572-9567},
 	url = {http://link.springer.com/10.1007/s10765-005-0011-4},
 	doi = {10.1007/s10765-005-0011-4},
-	language = {en},
 	number = {2},
 	urldate = {2014-09-19},
 	journal = {International Journal of Thermophysics},
@@ -41,4 +58,17 @@
 	year = {2006},
 	pages = {494--506},
 	file = {art%3A10.1007%2Fs10765-005-0011-4.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZIMSAVXB/art%3A10.1007%2Fs10765-005-0011-4.pdf:application/pdf}
+}
+
+@article{foiles_embedded-atom-method_1986,
+	title = {Embedded-atom-method functions for the fcc metals Cu, Ag, Au, Ni, Pd, Pt, and their alloys},
+	volume = {33},
+	url = {http://www.google.de/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0CCMQFjAA&url=http%3A%2F%2Fgalilei.chem.psu.edu%2F~bjg%2FChem560_2003%2FPotentials%2FFoiles_1986.pdf&ei=z5MhVKaxIoKCzAP084HIDQ&usg=AFQjCNE2Gno4pjkeYnzZC1354OE0_0EEbA&bvm=bv.75775273,d.bGQ},
+	number = {12},
+	journal = {Physical Review B},
+	author = {Foiles, S.M. and Baskes, M.I. and Daw, M. S.},
+	month = jun,
+	year = {1986},
+	pages = {7983--7991},
+	file = {Foiles_1986.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WWIS9HZX/Foiles_1986.pdf:application/pdf}
 }
