--- a/results.tex
+++ b/results.tex
@@ -1,5 +1,11 @@
 \chapter{Ergebnisse}
 
+Im Verlauf der Erforschung möglicher Prozesse wurden Abscheidungen von Gold, Silizium (beide PVD), Siliziumoxid (CVD) und Aluminiumoxid (ALD) simuliert, die nachfolgend im Einzelnen vorgestellt werden.
+Für jedes System mussten zuerst passende MD-Potential\-para\-metri\-sierungen gefunden werden, die anschließend mit Parsivald durch günstige Prozessparameter zu einer \todo{ist nicht wirklich komplett gesamtheitlich}gesamtheitlichen Abscheidungssimulation \todo{phrasing}gepackt wurden.
+
+\todo{woanders?}
+Präparation der Substrate geschah entweder durch Relaxation einer zufälligen Struktur in \todo{ref}LAMMPS, oder mittels \todo{ref}Materials Studio, dessen exportierte .pdb-Dateien per \todo{ref}Atomsk in .lmp-Formate überführt wurden, die von LAMMPS und Parsivald lesbar sind.
+
 \input{goldpvd}
 \clearpage
 \input{siliconpvd}
