siliconpvd started; goldpvd finished

--- a/literature.bib
+++ b/literature.bib
@@ -15,6 +15,63 @@
 	file = {ALD_Review_2005.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2E677H5R/ALD_Review_2005.pdf:application/pdf}
 }
 
+@misc{plimpton_lammps_2014,
+	title = {{LAMMPS} Project},
+	url = {http://lammps.sandia.gov/},
+	journal = {{LAMMPS} Molecular Dynamics Simulator},
+	author = {Plimpton, Steve},
+	month = sep,
+	year = {2014}
+}
+
+@article{narayanan_reactive_2012,
+	title = {A reactive force field for lithium–aluminum silicates with applications to eucryptite phases},
+	volume = {20},
+	issn = {0965-0393, 1361-651X},
+	url = {http://stacks.iop.org/0965-0393/20/i=1/a=015002?key=crossref.9168129d035251f6a058ddf16bc33698},
+	doi = {10.1088/0965-0393/20/1/015002},
+	number = {1},
+	urldate = {2013-10-28},
+	journal = {Modelling and Simulation in Materials Science and Engineering},
+	author = {Narayanan, Badri and van Duin, Adri C T and Kappes, Branden B and Reimanis, Ivar E and Ciobanu, Cristian V},
+	month = jan,
+	year = {2012},
+	pages = {015002},
+	file = {Narayanan.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XG8VUGT6/Narayanan.pdf:application/pdf;supdata.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EMRUJ49A/supdata.pdf:application/pdf}
+}
+
+@article{liu_development_2012,
+	title = {Development of a {ReaxFF} Reactive Force Field for Ettringite and Study of its Mechanical Failure Modes from Reactive Dynamics Simulations},
+	volume = {116},
+	issn = {1089-5639, 1520-5215},
+	url = {http://pubs.acs.org/doi/abs/10.1021/jp210135j},
+	doi = {10.1021/jp210135j},
+	number = {15},
+	urldate = {2013-11-14},
+	journal = {The Journal of Physical Chemistry A},
+	author = {Liu, Lianchi and Jaramillo-Botero, Andres and Goddard, William A. and Sun, Huai},
+	month = apr,
+	year = {2012},
+	pages = {3918--3925},
+	file = {liu2012.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EREFQKMT/liu2012.pdf:application/pdf;liu2012_supporting.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/4RGJ72BV/liu2012_supporting.pdf:application/pdf}
+}
+
+@article{nielson_development_2005,
+	title = {Development of the {ReaxFF} Reactive Force Field for Describing Transition Metal Catalyzed Reactions, with Application to the Initial Stages of the Catalytic Formation of Carbon Nanotubes},
+	volume = {109},
+	issn = {1089-5639, 1520-5215},
+	url = {http://pubs.acs.org/doi/abs/10.1021/jp046244d},
+	doi = {10.1021/jp046244d},
+	number = {3},
+	urldate = {2013-11-14},
+	journal = {The Journal of Physical Chemistry A},
+	author = {Nielson, Kevin D. and van Duin, Adri C. T. and Oxgaard, Jonas and Deng, Wei-Qiao and Goddard, William A.},
+	month = jan,
+	year = {2005},
+	pages = {493--499},
+	file = {ffield.reax.nielson:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/NCJ5PAGJ/ffield.reax.nielson:text/plain;jp046244d.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/RIUZWD5M/jp046244d.pdf:application/pdf}
+}
+
 @article{cignoni_dewall:_1998,
 	title = {{DeWall}: A fast divide and conquer Delaunay triangulation algorithm in Ed},
 	volume = {30},
@@ -32,6 +89,59 @@
 	keywords = {Delaunay triangulation, divide and conquer, uniform grids},
 	pages = {333--341},
 	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5VGE2GAW/Cignoni et al. - 1998 - DeWall A fast divide and conquer Delaunay triangu.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6ZURVU8C/S0010448597000821.html:text/html}
+}
+
+@article{kulkarni_oxygen_2013,
+	title = {Oxygen Interactions with Silica Surfaces: Coupled Cluster and Density Functional Investigation and the Development of a New {ReaxFF} Potential},
+	volume = {117},
+	issn = {1932-7447},
+	shorttitle = {Oxygen Interactions with Silica Surfaces},
+	url = {http://dx.doi.org/10.1021/jp3086649},
+	doi = {10.1021/jp3086649},
+	abstract = {We consider oxygen interactions with realistic silica surfaces, including both experimentally observed nondefective surface reconstructions and experimentally observed surface defects. Nondefective models include clusters representing the site above a fully coordinated surface Si atom and bridging O atoms, and the defective models include clusters representing an under-coordinated Si defect, a nonbridging O defect, and a ring structure. Energies were obtained for the approach of atomic and molecular oxygen to these clusters in various configurations by using explicitly correlated {CCSD}(T)-F12b electronic structure theory and the Minnesota density functionals, which were found to be in good agreement. The Minnesota functionals were employed in binding energy calculations for all of the clusters, considering the singlet and triplet spin states for nondefective clusters and doublet and quartet spin states for defective clusters. We find that the chosen defects are energetically favorable sites for binding. The density functional energies were used to extend the empirical {ReaxFFSiO} potential for silica, which was previously parametrized for bulk silica polymorphs (van Duin et al. J. Phys. Chem. A, 2003, 107, 3803?3811), to model the gas?surface interactions represented by the defective and nondefective clusters presented here. Interaction energy predictions from {ReaxFFSiOGSI} agree very well with the density functional energies. {ReaxFFSiOGSI} can now be employed in reactive large-scale molecular dynamics simulations involving oxygen?silica gas?surface interactions such as oxide growth and the heterogeneous recombination of oxygen occurring on real silica surfaces.},
+	number = {1},
+	urldate = {2014-07-01},
+	journal = {The Journal of Physical Chemistry C},
+	author = {Kulkarni, Anant D. and Truhlar, Donald G. and Goverapet Srinivasan, Sriram and van Duin, Adri C. T. and Norman, Paul and Schwartzentruber, Thomas E.},
+	month = jan,
+	year = {2013},
+	pages = {258--269},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/H52T8U9Z/Kulkarni et al. - 2013 - Oxygen Interactions with Silica Surfaces Coupled .pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/BPNQXE93/jp3086649.html:text/html}
+}
+
+@article{newsome_oxidation_2012,
+	title = {Oxidation of Silicon Carbide by O2 and H2O: A {ReaxFF} Reactive Molecular Dynamics Study, Part I},
+	volume = {116},
+	issn = {1932-7447},
+	shorttitle = {Oxidation of Silicon Carbide by O2 and H2O},
+	url = {http://dx.doi.org/10.1021/jp306391p},
+	doi = {10.1021/jp306391p},
+	abstract = {Simulations of the initial oxidation process of a {SiC} surface exposed to O2 and H2O molecules was studied with {ReaxFF}, an atomically detailed reactive molecular dynamics method that naturally models the breaking and forming of bonds. In this work, the {ReaxFF} forcefield was first expanded by training it with new quantum mechanics data of the binding energy, equation of state, and heat of formation of the {SiC} crystal, along with data from earlier studies that describes Si ? Si, Si ? O, and Si ? H interactions. This expanded {ReaxFF} forcefield is capable of simultaneously describing both Si?C?O and Si?O?H bonding interactions. Using the forcefield, oxidation simulations were performed at various temperatures (in the range of 500 to 5000 K), and the trajectories were analyzed. The analyses showed that {SiC} gradually transforms into the oxides of silicon with simultaneous formation of a graphite-like layer. In presence of excess O2, the graphite-like layer was further oxidized to {CO} and {CO}2. We also analyzed the trajectories with two-atom and three-atom clusters to quantitatively track the oxidation progress. This analysis clearly showed Si?O and C?C bond formation at the expense of O?O and Si?C bond consumption indicating {SiC} oxidation with simultaneous formation for carbon-like structure. Consumption of {SiC} with O2 was found to be faster than that with H2O. We have also reported the oxidation simulation of {SiC} with a mixture of H2O and O2. Oxidation proceeded effectively as a two-part sequence, with O2 first oxidizing the {SiC}, followed then by H2O.},
+	number = {30},
+	urldate = {2014-07-01},
+	journal = {The Journal of Physical Chemistry C},
+	author = {Newsome, David A. and Sengupta, Debasis and Foroutan, Hosein and Russo, Michael F. and van Duin, Adri C. T.},
+	month = aug,
+	year = {2012},
+	pages = {16111--16121},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/I2MDGDF9/Newsome et al. - 2012 - Oxidation of Silicon Carbide by O2 and H2O A Reax.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/E4P46FEC/jp306391p.html:text/html;jp306391p_si_001.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8WF4U9MP/jp306391p_si_001.pdf:application/pdf}
+}
+
+@article{zhang_carbon_2009,
+	title = {Carbon Cluster Formation during Thermal Decomposition of Octahydro-1,3,5,7-tetranitro-1,3,5,7-tetrazocine and 1,3,5-Triamino-2,4,6-trinitrobenzene High Explosives from {ReaxFF} Reactive Molecular Dynamics Simulations},
+	volume = {113},
+	issn = {1089-5639},
+	url = {http://dx.doi.org/10.1021/jp901353a},
+	doi = {10.1021/jp901353a},
+	abstract = {We report molecular dynamics ({MD}) simulations using the first-principles-based {ReaxFF} reactive force field to study the thermal decomposition of 1,3,5-triamino-2,4,6-trinitrobenzene ({TATB}) and octahydro-1,3,5,7-tetranitro-1,3,5,7-tetrazocine ({HMX}) at various densities and temperatures. {TATB} is known to produce a large amount (15?30\%) of high-molecular-weight carbon clusters, whereas detonation of nitramines such as {HMX} and {RDX} (1,3,5-trinitroperhydro-1,3,5-triazine) generate predominantly low-molecular-weight products. In agreement with experimental observation, these simulations predict that {TATB} decomposition quickly (by 30 ps) initiates the formation of large carbonaceous clusters (more than 4000 amu, or ?15?30\% of the total system mass), and {HMX} decomposition leads almost exclusively to small-molecule products. We find that {HMX} decomposes readily on this time scale at lower temperatures, for which the decomposition rate of {TATB} is about an order of magnitude slower. Analyzing the {ReaxFF} {MD} results leads to the detailed atomistic structure of this carbon-rich phase of {TATB} and allows characterization of the kinetics and chemistry related to this phase and their dependence on system density and temperature. The carbon-rich phase formed from {TATB} contains mainly polyaromatic rings with large oxygen content, leading to graphitic regions. We use these results to describe the initial reaction steps of thermal decomposition of {HMX} and {TATB} in terms of the rates for forming primary and secondary products, allowing comparison to experimentally derived models. These studies show that {MD} using the {ReaxFF} reactive force field provides detailed atomistic information that explains such macroscopic observations as the dramatic difference in carbon cluster formation between {TATB} and {HMX}. This shows that {ReaxFF} {MD} captures the fundamental differences in the mechanisms of such systems and illustrates how the {ReaxFF} may be applied to model complex chemical phenomena in energetic materials. The studies here illustrate this for modestly sized systems and modest periods; however, {ReaxFF} calculations of reactive processes have already been reported on systems with ?106 atoms. Thus, with suitable computational facilities, one can study the atomistic level chemical processes in complex systems under extreme conditions.},
+	number = {40},
+	urldate = {2014-07-01},
+	journal = {The Journal of Physical Chemistry A},
+	author = {Zhang, Luzheng and Zybin, Sergey V. and van Duin, Adri C. T. and Dasgupta, Siddharth and Goddard, William A. and Kober, Edward M.},
+	month = oct,
+	year = {2009},
+	pages = {10619--10640},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WRTGH25Z/Zhang et al. - 2009 - Carbon Cluster Formation during Thermal Decomposit.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/NHUJQ2VD/jp901353a.html:text/html}
 }
 
 @phdthesis{lorenz_entwicklung_2012,
@@ -71,4 +181,39 @@
 	year = {1986},
 	pages = {7983--7991},
 	file = {Foiles_1986.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WWIS9HZX/Foiles_1986.pdf:application/pdf}
+}
+
+@article{chenoweth_simulations_2005,
+	title = {Simulations on the Thermal Decomposition of a Poly(dimethylsiloxane) Polymer Using the {ReaxFF} Reactive Force Field},
+	volume = {127},
+	issn = {0002-7863},
+	url = {http://dx.doi.org/10.1021/ja050980t},
+	doi = {10.1021/ja050980t},
+	abstract = {To investigate the failure of the poly(dimethylsiloxane) polymer ({PDMS}) at high temperatures and pressures and in the presence of various additives, we have expanded the {ReaxFF} reactive force field to describe carbonsilicon systems. From molecular dynamics ({MD}) simulations using {ReaxFF} we find initial thermal decomposition products of {PDMS} to be {CH}3 radical and the associated polymer radical, indicating that decomposition and subsequent cross-linking of the polymer is initiated by {SiC} bond cleavage, in agreement with experimental observations. Secondary reactions involving these {CH}3 radicals lead primarily to formation of methane. We studied temperature and pressure dependence of {PDMS} decomposition by following the rate of production of methane in the {ReaxFF} {MD} simulations. We tracked the temperature dependency of the methane production to extract Arrhenius parameters for the failure modes of {PDMS}. Furthermore, we found that at increased pressures the rate of {PDMS} decomposition drops considerably, leading to the formation of fewer {CH}3 radicals and methane molecules. Finally, we studied the influence of various additives on {PDMS} stability. We found that the addition of water or a {SiO}2 slab has no direct effect on the short-term stability of {PDMS}, but addition of reactive species such as ozone leads to significantly lower {PDMS} decomposition temperature. The addition of nitrogen monoxide does not significantly alter the degradation temperature but does retard the initial production of methane and C2 hydrocarbons until the nitrogen monoxide is depleted. These results, and their good agreement with available experimental data, demonstrate that {ReaxFF} provides a useful computational tool for studying the chemical stability of polymers.},
+	number = {19},
+	urldate = {2014-09-24},
+	journal = {Journal of the American Chemical Society},
+	author = {Chenoweth, Kimberly and Cheung, Sam and van Duin, Adri C. T. and Goddard, William A. and Kober, Edward M.},
+	month = may,
+	year = {2005},
+	pages = {7192--7202},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5JWWHP7J/Chenoweth et al. - 2005 - Simulations on the Thermal Decomposition of a Poly.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XJUKFZU5/ja050980t.html:text/html}
+}
+
+@article{liu_reaxff-lg:_2011,
+	title = {{ReaxFF}-lg: Correction of the {ReaxFF} Reactive Force Field for London Dispersion, with Applications to the Equations of State for Energetic Materials},
+	volume = {115},
+	issn = {1089-5639},
+	shorttitle = {{ReaxFF}-lg},
+	url = {http://dx.doi.org/10.1021/jp201599t},
+	doi = {10.1021/jp201599t},
+	abstract = {The practical levels of density functional theory ({DFT}) for solids ({LDA}, {PBE}, {PW}91, B3LYP) are well-known not to account adequately for the London dispersion (van der Waals attraction) so important in molecular solids, leading to equilibrium volumes for molecular crystals ?10?15\% too high. The {ReaxFF} reactive force field is based on fitting such {DFT} calculations and suffers from the same problem. In the paper we extend {ReaxFF} by adding a London dispersion term with a form such that it has low gradients (lg) at valence distances leaving the already optimized valence interactions intact but behaves as 1/R6 for large distances. We derive here these lg corrections to {ReaxFF} based on the experimental crystal structure data for graphite, polyethylene ({PE}), carbon dioxide, and nitrogen and for energetic materials: hexahydro-1,3,5-trinitro-1,3,5-s-triazine ({RDX}), pentaerythritol tetranitrate ({PETN}), 1,3,5-triamino-2,4,6-trinitrobenzene ({TATB}), and nitromethane ({NM}). After this dispersion correction the average error of predicted equilibrium volumes decreases from 18.5 to 4.2\% for the above systems. We find that the calculated crystal structures and equation of state with {ReaxFF}-lg are in good agreement with experimental results. In particular, we examined the phase transition between α-{RDX} and ?-{RDX}, finding that {ReaxFF}-lg leads to excellent agreement for both the pressure and volume of this transition occurring at ?4.8 {GPa} and ?2.18 g/cm3 density from {ReaxFF}-lg vs 3.9 {GPa} and ?2.21 g/cm3 from experiment. We expect {ReaxFF}-lg to improve the descriptions of the phase diagrams for other energetic materials.},
+	number = {40},
+	urldate = {2014-09-24},
+	journal = {The Journal of Physical Chemistry A},
+	author = {Liu, Lianchi and Liu, Yi and Zybin, Sergey V. and Sun, Huai and Goddard, William A.},
+	month = oct,
+	year = {2011},
+	pages = {11016--11022},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WE5C5SDZ/Liu et al. - 2011 - ReaxFF-lg Correction of the ReaxFF Reactive Force.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZUR95DPW/jp201599t.html:text/html}
 }
